--- a/Journey/Journey/Resources/Storyboards/Challenge/Course.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Challenge/Course.storyboard
@@ -20,11 +20,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Na-Wv-A8V">
                                 <rect key="frame" x="0.0" y="44" width="414" height="112"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="journeySmileSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="KlX-xX-Dl1">
-                                        <rect key="frame" x="24" y="24" width="59.5" height="64"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crsGraphic" translatesAutoresizingMaskIntoConstraints="NO" id="KlX-xX-Dl1">
+                                        <rect key="frame" x="24" y="29" width="54" height="54"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Iv8-W2-bhj">
-                                        <rect key="frame" x="91.5" y="36" width="147" height="40.5"/>
+                                        <rect key="frame" x="86" y="36" width="147" height="40.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재 진행중인 코스" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2a8-BI-vGG">
                                                 <rect key="frame" x="0.0" y="0.0" width="90" height="14.5"/>
@@ -101,7 +101,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="journeySmileSampleImg" width="59.5" height="64"/>
+        <image name="crsGraphic" width="54" height="54"/>
         <namedColor name="LightPink">
             <color red="1" green="0.83099997043609619" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
