--- a/Journey/Journey/Sources/ViewControllers/PopUp/AnimationPopUpViewController.xib
+++ b/Journey/Journey/Sources/ViewControllers/PopUp/AnimationPopUpViewController.xib
@@ -23,8 +23,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AnimationPopUpViewController" customModule="Journey" customModuleProvider="target">
             <connections>
                 <outlet property="animationImageView" destination="lct-dA-Wx9" id="fuv-nl-8vU"/>
+                <outlet property="descriptionLabel" destination="Ro6-a3-Z5y" id="FOD-Jt-q4p"/>
                 <outlet property="pinkButton" destination="eQA-8T-EIn" id="8kA-TG-n4Y"/>
                 <outlet property="popUpView" destination="wgW-Ud-Mg9" id="tMY-tN-3Sm"/>
+                <outlet property="titleLabel" destination="MQs-WO-IFb" id="Zja-xy-TM0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
