--- a/Journey/Journey/Sources/ViewControllers/PopUp/PopUpViewController.xib
+++ b/Journey/Journey/Sources/ViewControllers/PopUp/PopUpViewController.xib
@@ -29,6 +29,7 @@
                 <outlet property="pinkButtonBottomConstraint" destination="O9E-Mg-4xI" id="B82-aJ-bOb"/>
                 <outlet property="popUpBgView" destination="YgR-Uh-m6x" id="eg6-dm-gng"/>
                 <outlet property="popUpImageView" destination="bVj-gL-3It" id="gQq-mQ-DrO"/>
+                <outlet property="stampCloseButton" destination="5DT-Wz-vlA" id="wzR-nc-F32"/>
                 <outlet property="titleLabel" destination="L6P-UJ-Jpl" id="zmk-gP-HbB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="whiteButton" destination="2Xe-hI-X8j" id="k0s-zh-kDm"/>
@@ -41,28 +42,28 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgR-Uh-m6x">
-                    <rect key="frame" x="43" y="230.33333333333334" width="328" height="445.66666666666663"/>
+                    <rect key="frame" x="43" y="229" width="328" height="448"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증하기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6P-UJ-Jpl">
-                            <rect key="frame" x="29" y="44.999999999999972" width="270" height="28.666666666666671"/>
+                            <rect key="frame" x="29" y="45" width="270" height="29"/>
                             <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="journeyMainSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="bVj-gL-3It">
-                            <rect key="frame" x="28" y="96.666666666666657" width="272" height="186.99999999999997"/>
+                            <rect key="frame" x="28" y="96.999999999999986" width="272" height="186.66666666666663"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="bVj-gL-3It" secondAttribute="height" multiplier="233:160" id="9Wr-Ez-rVY"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="챌린지를 성공해서 소확행을 작성할 수 있어.  나와 함께 쓰러갈래, 쟈기?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qs-4Q-Jxx">
-                            <rect key="frame" x="22" y="299.66666666666663" width="284" height="28"/>
+                            <rect key="frame" x="22" y="299.66666666666663" width="284" height="30.333333333333314"/>
                             <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                             <color key="textColor" name="Black2Text"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cUv-Ed-G37">
-                            <rect key="frame" x="28" y="345.66666666666663" width="272" height="44"/>
+                            <rect key="frame" x="28" y="348" width="272" height="44"/>
                             <color key="backgroundColor" name="Pink2"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="uTs-gg-Xh3"/>
@@ -76,7 +77,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Xe-hI-X8j">
-                            <rect key="frame" x="28" y="391.66666666666663" width="272" height="44"/>
+                            <rect key="frame" x="28" y="394" width="272" height="44"/>
                             <color key="backgroundColor" name="White"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="OHd-Tt-E71"/>
@@ -89,11 +90,19 @@
                                 <action selector="touchWhiteButton:" destination="-1" eventType="touchUpInside" id="T03-5K-r84"/>
                             </connections>
                         </button>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5DT-Wz-vlA">
+                            <rect key="frame" x="280" y="4" width="44" height="44"/>
+                            <state key="normal" image="gnbIconX"/>
+                            <connections>
+                                <action selector="touchStampCloseButton:" destination="-1" eventType="touchUpInside" id="7UB-0Y-jwv"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="2Xe-hI-X8j" firstAttribute="top" secondItem="cUv-Ed-G37" secondAttribute="bottom" constant="2" id="2zi-ti-RwI"/>
                         <constraint firstItem="cUv-Ed-G37" firstAttribute="top" secondItem="6qs-4Q-Jxx" secondAttribute="bottom" constant="18" id="4gu-5U-rI4"/>
+                        <constraint firstAttribute="trailing" secondItem="5DT-Wz-vlA" secondAttribute="trailing" constant="4" id="6Xf-xf-Das"/>
                         <constraint firstItem="cUv-Ed-G37" firstAttribute="leading" secondItem="YgR-Uh-m6x" secondAttribute="leading" constant="28" id="7U8-q4-Uo2"/>
                         <constraint firstItem="bVj-gL-3It" firstAttribute="leading" secondItem="YgR-Uh-m6x" secondAttribute="leading" constant="28" id="9li-Pe-tV3"/>
                         <constraint firstItem="L6P-UJ-Jpl" firstAttribute="top" secondItem="YgR-Uh-m6x" secondAttribute="top" constant="45" id="BHr-HN-b9l"/>
@@ -105,6 +114,7 @@
                         <constraint firstAttribute="trailing" secondItem="L6P-UJ-Jpl" secondAttribute="trailing" constant="29" id="SM5-ju-mQk"/>
                         <constraint firstAttribute="trailing" secondItem="bVj-gL-3It" secondAttribute="trailing" constant="28" id="Uw7-b9-RY7"/>
                         <constraint firstItem="bVj-gL-3It" firstAttribute="top" secondItem="L6P-UJ-Jpl" secondAttribute="bottom" constant="23" id="VFz-R4-65n"/>
+                        <constraint firstItem="5DT-Wz-vlA" firstAttribute="top" secondItem="YgR-Uh-m6x" secondAttribute="top" constant="4" id="WU5-LQ-T2S"/>
                         <constraint firstItem="6qs-4Q-Jxx" firstAttribute="leading" secondItem="YgR-Uh-m6x" secondAttribute="leading" constant="22" id="Xxf-0H-1e1"/>
                         <constraint firstItem="2Xe-hI-X8j" firstAttribute="leading" secondItem="YgR-Uh-m6x" secondAttribute="leading" constant="28" id="nid-t8-3ko"/>
                         <constraint firstAttribute="bottom" secondItem="2Xe-hI-X8j" secondAttribute="bottom" constant="10" id="q5x-SH-zbj"/>
@@ -114,7 +124,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1PY-Du-VKW">
-                    <rect key="frame" x="128.66666666666666" y="683" width="156.99999999999997" height="41"/>
+                    <rect key="frame" x="128.66666666666666" y="684" width="156.99999999999997" height="41"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="157" id="Lg0-PO-ccS"/>
                         <constraint firstAttribute="height" constant="41" id="YMy-rj-ZW9"/>
@@ -142,6 +152,7 @@
         </view>
     </objects>
     <resources>
+        <image name="gnbIconX" width="44" height="44"/>
         <image name="journeyMainSampleImg" width="310" height="308"/>
         <namedColor name="Black2Text">
             <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
