--- a/Journey/Journey/Resources/Storyboards/Home/Home.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Home/Home.storyboard
@@ -35,22 +35,22 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="689"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcg-qq-1f1">
-                                        <rect key="frame" x="24" y="17" width="169.33333333333334" height="35"/>
-                                        <string key="text">Hi, 쟈기~ 오늘도 안녕하니? 
-끈적한 우리 관계를 위해</string>
+                                        <rect key="frame" x="24" y="16.999999999999996" width="224" height="37.666666666666657"/>
+                                        <string key="text">안녕, 쟈기?
+오늘도 당신과 지독하게 엮여 보려 해</string>
                                         <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="690-zu-ul9">
-                                        <rect key="frame" x="24" y="72" width="30" height="54"/>
+                                        <rect key="frame" x="24" y="74.666666666666671" width="30" height="48"/>
                                         <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="36"/>
                                         <state key="normal">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6j6-R8-Ky9">
-                                        <rect key="frame" x="24" y="136" width="88" height="32"/>
+                                        <rect key="frame" x="24" y="132.66666666666666" width="88" height="32"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="jqj-dH-DmL">
                                                 <rect key="frame" x="9" y="6" width="20" height="20"/>
@@ -60,7 +60,7 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWG-dc-0NX">
-                                                <rect key="frame" x="38" y="7.9999999999999982" width="36" height="16.333333333333329"/>
+                                                <rect key="frame" x="38" y="7.3333333333333446" width="37.333333333333343" height="17.666666666666671"/>
                                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
                                                 <color key="textColor" name="White"/>
                                                 <nil key="highlightedColor"/>
@@ -192,6 +192,7 @@
                         <outlet property="firstIndicatiorLeadingConstraint" destination="ic8-0r-ViE" id="lbk-Yn-fp2"/>
                         <outlet property="journeyImageView" destination="CYq-uQ-Oxb" id="fy2-JU-ieh"/>
                         <outlet property="percentDescriptionButton" destination="7pt-9w-MQF" id="POP-d2-lnD"/>
+                        <outlet property="propertyImageView" destination="jqj-dH-DmL" id="i3z-nT-KtN"/>
                         <outlet property="subTitleLabel" destination="zcg-qq-1f1" id="tju-E5-PoT"/>
                         <outlet property="thirdIndicatorLeadingConstraint" destination="ja2-1f-iwZ" id="Yeg-vJ-rie"/>
                     </connections>
